--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "ajv": "^6.5.4",
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "babel-jest": "^23.6.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
     "react": "^16.5.2",
+    "react-animated-css": "^1.0.5",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
