--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.4.0",
     "react": "^16.5.2",
     "react-animated-css": "^1.0.5",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
